--- a/Round/shared.css
+++ b/Round/shared.css
@@ -269,7 +269,7 @@ div.gamepadcontextmenu_contextMenuContents_sIgB- {
 }
 
 .spotlightgameplaysummary_SummaryScreenshot_2gFx1,
-.spotlightgameplaysummary_SummaryScreenshot_2gFx1 > img,
+.spotlightgameplaysummary_SummaryScreenshot_2gFx1 > img:first-child,
 .appdetailsscreenshotssection_Thumbnail_2B8Nk,
 .appdetailsscreenshotssection_Thumbnail_2B8Nk > img:first-child {
   border-radius: var(--round-radius-size);
