Fixed in game QAM header background

--- a/Obsidian/shared.css
+++ b/Obsidian/shared.css
@@ -211,6 +211,10 @@ QUICK ACCESS
   background-color: var(--obsidian-main-color);
 }
 
+.header_Header_1E_SL.header_InQuickAccess_2mRo5{
+  background-color: var(--obsidian-main-color);
+}
+
 /*
 OTHER
 */
