--- a/Centered-Home/shared.css
+++ b/Centered-Home/shared.css
@@ -1,6 +1,10 @@
-.basicgamecarousel_BasicGameCarousel_3MdH5 {
-  height: 320px !important;
+@media all and (max-width: 1200px) {
+  /* wont be apply in handheld mode as it cuts off the background blur*/
+  .basicgamecarousel_BasicGameCarousel_3MdH5 {
+    height: 320px !important;
+  }
 }
+
 .gamepadhomerecentgames_RecentGamesContainer_2_cRk {
   padding-top: 98px;
   padding-bottom: 61px;
