Phantom - Fix library and glow issues

--- a/Phantom/colors.css
+++ b/Phantom/colors.css
@@ -25,7 +25,10 @@
 }
 
 /* Stylize library */
-.gamepadlibrary_GamepadLibrary_ZBBhe {
+.gamepadlibrary_GamepadLibrary_ZBBhe,
+.gamepadlibrary_GamepadLibrary_ZBBhe .scrollpanel_ScrollPanel_1CXdi,
+.gamepadlibrary_GamepadLibrary_ZBBhe
+  .gamepadtabbedpage_TabHeaderRowWrapper_2Jobs::before {
   background: var(--phantom-color) !important;
 }
 .gamepadlibrary_GamepadLibrary_ZBBhe
